
[workspace]
members = ["zenoh-plugin-remote-api", "zenoh-keyexpr-wasm"]
resolver = "1"

[workspace.package]
version = "1.1.1"
repository = "https://github.com/eclipse-zenoh/zenoh-ts"
homepage = "http://zenoh.io"
authors = ["Charles Schleich <charles.schleich@zettascale.tech>"]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Remote API Plugin for Zenoh using Websockets"

[workspace.dependencies]
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
tokio-rustls = { version = "0.26.0", default-features = false }
futures-util = "0.3.26"
rustls-pemfile = "2.1.2"
base64 = "0.22.1"
flume = "0.11"
futures = "0.3.5"
git-version = "0.3.5"
lazy_static = "1.4.0"
ts-rs = { version = "9.0", features = [
    "serde-compat",
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
    "import-esm",
] }
tracing = "0.1"
schemars = { version = "0.8.12", features = ["either"] }
serde = { version = "1.0.154", default-features = false, features = [
    "derive",
] } # Default features are disabled due to usage in no_std crates
serde_json = "1.0.114"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.1.1", features = [
    "plugins",
], version = "1.1.1" }
zenoh-ext = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.1.1", version = "1.1.1" }
zenoh_backend_traits = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.1.1", version = "1.1.1" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.1.1", version = "1.1.1" }
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.1.1", version = "1.1.1" }
zenoh-result = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.1.1", version = "1.1.1" }
uuid = { version = "1.3.0", default-features = false, features = [
    "v4",
    "serde",
] }
uhlc = { version = "0.8.0", default-features = false } # Default features are disabled due to usage in no_std crates

[workspace.metadata.bin]
zenohd = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.0.0-dev" }
