
[workspace]
members = ["zenoh-plugin-remote-api", "zenoh-keyexpr-wasm"]
resolver = "1"

[workspace.package]
version = "1.4.0"
repository = "https://github.com/eclipse-zenoh/zenoh-ts"
homepage = "http://zenoh.io"
authors = ["Charles Schleich <charles.schleich@zettascale.tech>"]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Remote API Plugin for Zenoh using Websockets"

[workspace.dependencies]
tokio = { version = "1.40.0", features = ["rt", "macros", "time"] }
tokio-tungstenite = "0.24.0"
tokio-rustls = { version = "0.26.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
rustls-pemfile = "2.1.2"
base64 = "0.22.1"
flume = "0.11"
futures = "0.3.5"
git-version = "0.3.5"
lazy_static = "1.4.0"
ts-rs = { version = "9.0", features = [
    "serde-compat",
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
    "import-esm",
] }
lru = "0.14.0"
tracing = "0.1"
schemars = { version = "0.8.21", features = ["either"] }
serde = { version = "1.0.210", default-features = false, features = [
  "derive",
] } # Default features are disabled due to usage in no_std crates
serde_json = "1.0.128"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
    "plugins",
], version = "1.4.0" }
zenoh-ext = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh_backend_traits = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh-result = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh-keyexpr = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }

uuid = { version = "1.3.0", default-features = false, features = [
    "v4",
    "serde",
] }
uhlc = { version = "0.8.0", default-features = false } # Default features are disabled due to usage in no_std crates
cargo-run-bin = "1.7.4"

[workspace.metadata.bin]
zenohd = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }

[profile.release.package.zenoh-keyexpr-wasm]
# Tell `rustc` to optimize for small code size for wasm project
opt-level = "s"
