[workspace]
members = ["zenoh-plugin-remote-api", "zenoh-bridge-remote-api", "zenoh-keyexpr-wasm"]
resolver = "1"

[workspace.package]
version = "1.5.0"
repository = "https://github.com/eclipse-zenoh/zenoh-ts"
homepage = "http://zenoh.io"
authors = ["Charles Schleich <charles.schleich@zettascale.tech>"]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Remote API Plugin for Zenoh using Websockets"

[workspace.dependencies]
async-liveliness-monitor = "0.1.1"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
rustc_version = "0.4.0"
tokio = { version = "1.45.1", features = ["rt", "macros", "time"] }
tokio-tungstenite = "0.27.0"
tokio-rustls = { version = "0.26.2", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
rustls-pemfile = "2.2.0"
base64 = "0.22.1"
flume = "0.11.1"
futures = "0.3.5"
git-version = "0.3.5"
lazy_static = "1.4.0"
lru = "0.14.0"
tracing = "0.1.41"
schemars = { version = "0.8.21" } # do not switch to 0.9, it's not supported by rust 1.75
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
] } # Default features are disabled due to usage in no_std crates
serde_json = "1.0.140"
jsonschema = { version = "0.18.0", default-features = false }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
    "plugins",
], version = "1.4.0" }
zenoh-ext = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh_backend_traits = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh-result = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh-keyexpr = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.4.0" }
zenoh-plugin-remote-api = { path = "zenoh-plugin-remote-api", version = "1.5.0" }

uuid = { version = "1.17.0", default-features = false, features = [
    "v4",
    "serde",
] }
uhlc = { version = "0.8.0", default-features = false } # Default features are disabled due to usage in no_std crates
cargo-run-bin = "1.7.4"

[workspace.metadata.bin]
zenohd = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.5.0" }

[profile.release.package.zenoh-keyexpr-wasm]
# Tell `rustc` to optimize for small code size for wasm project
opt-level = "s"
